--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
@@ -49,6 +50,9 @@ section {
     font-family: var(--font3);
     font-size: 3.5vw;
 }
+section > p {
+    padding-bottom: 2em;
+}
 section.normal {
     background-color: white;
     color: black;
@@ -56,12 +60,26 @@ section.normal {
 section.imagem {
     background-color: rgb(74, 72, 72);
     color: white;
+    box-shadow: inset 6px 13px 0px rgba(0, 0, 0, 0.158);
+    background-attachment: fixed;
 }
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgb(47, 46, 46);
+    background-color: rgba(47, 46, 46, 0.606);
+    text-shadow: 1px 1px 0px black;
     
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: center right;
+    background-size: cover;
+
+}
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
+
 }
 footer {
     background-color: black;
